src/test/deca/context/valid/SansObjet/DeclVar-UnaryMinus-float-int.deca
// Description:
//    Declaration of a float variable using - operation on a int variable .
// 
// Results:
//     nothing
// 
// Historique: 
//    cree le 11/01/2022 

{
    int x =  20; 
    float z = -20 ; 
}
