src/test/deca/context/invalid/SansObjet/DeclVar-Plus-int-float-boolean.deca
// Description:
//    Declaration of a int variable using + operation between a float variable and boolean .
// 
// Results:
//     Contextual error
//     Line 14: (RULE 3.33) Illegal operand type.
// 
// Historique: 
//    cree le 11/01/2022 

{
    float x =  1.5; 
    boolean y = false; 
    int z = 1.5 + false; 
}
